Bug 300992 - implement readystatechange event. r=smaug, sr=jst